--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,13 +7,13 @@ $bold: 700;
 $letter-spacing: 0px;
 
 
- // Green
- $green: #61D2B4;
- $green-drack: #33b391;
+ // Colours
+ $pulse-blue: #00b4eb;
+ $pulse-blue-drack: #006685;
 
 //Current Preset Declareation
- $preset:  $green;
- $preset-drack:  $green-drack;
+ $preset:  $pulse-blue;
+ $preset-drack:  $pulse-blue-drack;
  
 	/*
 * Mate - Bootstrap 4 Template
@@ -371,8 +371,11 @@ $letter-spacing: 0px;
    3. Hero Area
    ========================================================================== */
 	#hero-area{
-		background: url(../img/hero-area.jpg) fixed no-repeat;
+		/*
+    background: url(../img/hero-area.jpg) fixed no-repeat;
 		background-size: cover;
+    */
+    background-color: #555;
 		color: #fff;
 		overflow: hidden;
 		position: relative;
@@ -380,7 +383,7 @@ $letter-spacing: 0px;
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			top: 0px;			
+			top: 0px;
 			left: 0px;
 			background: $preset;
 			opacity: 0.9;
@@ -426,7 +429,7 @@ $letter-spacing: 0px;
 	  padding: 0px;
 	}
 	.top-nav-collapse{
-	  background: #fff;
+	  background: #555;
 	  z-index: 999999;
 	  top: 0px!important;
 	  padding: 0;
@@ -440,9 +443,10 @@ $letter-spacing: 0px;
 	  .navbar-brand{
 	    top: 0px;
 	  }
-	  background: #fff!important;
+	  /*
+    background: #fff!important;
+    */
 	  .navbar-nav .nav-link{
-	    color: #333 !important;
 	    margin-top: 0px!important;
 	    margin-bottom: 0px!important;
 	    &:hover{
@@ -452,9 +456,6 @@ $letter-spacing: 0px;
 		.navbar-nav .nav-link.active{
 			color: #fff!important;
 		}
-	}
-	.indigo{
-	  background: transparent;
 	}
 	.navbar-expand-lg .navbar-nav .nav-link{
 	  color: #fff;
@@ -655,7 +656,7 @@ $letter-spacing: 0px;
   7. Video promo Style
    ========================================================================== */
    .video-promo{
-	   	background: #61D2B4;
+	  background: $preset;
 		color: #fff;
 		overflow: hidden;
 		position: relative;	
@@ -846,8 +847,11 @@ $letter-spacing: 0px;
  10. Counter Section Style
  ========================================================================== */
    .counters{
-	   	background: url(../img/counter.jpg) fixed;
-		position: relative;
+	  /*
+    background: url(../img/counter.jpg) fixed;
+		*/
+    background-color: $preset;
+    position: relative;
 		.facts-item{
 			text-align: center;
 			color: #fff;
