make nav collapse earlier, update bottom nav, set grey background for team

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1090,6 +1090,9 @@ button:focus {
 /* ==========================================================================
   12. Team Section
    ========================================================================== */
+#team {
+  background-color: #ddd;
+}
 
 .single-team:hover .team-details {
   opacity: 1;
