--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 1. IMPORT GOOGLE FONTS
 ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,700");
-                                   /* ==========================================================================
+/* ==========================================================================
 2. GENERAL
 ========================================================================== */
 body {
@@ -1003,6 +1003,10 @@ margin-top: 20px;
 /* ==========================================================================
 12. Team Section
 ========================================================================== */
+#team {
+background-color: #ddd;
+}
+
 .single-team:hover .team-details {
 opacity: 1;
 }
