update contact message success message

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1309,6 +1309,12 @@ button:focus {
   margin-top: 10px;
 }
 
+.text-success {
+  font-size: 14px;
+  margin-top: 10px;
+  animation-delay: 4s;
+}
+
 .list-unstyled {
   li {
     color: #d9534f;
