--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -43,8 +43,8 @@
     line-height: 20px;
   }
 }
-/* mobile or only mobile */
-@media (max-width: 767px) {
+
+@media (max-width: 1300px) {
   .no-webp #hero-area {
     background-image: url("../img/hero-area-small.jpg");
   }
@@ -53,6 +53,21 @@
     background-image: url("../img/hero-area-small.webp");
   }
 
+  #hero-area {
+    background-repeat: repeat-x;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  #hero-area {
+    .contents {
+    padding: 20px 0 50px;
+    }
+  }
+}
+
+/* mobile or only mobile */
+@media (max-width: 767px) {
   .section-header .section-title {
     font-size: 20px;
   }
@@ -64,7 +79,7 @@
   #hero-area .contents {
     h1 {
       font-size: 38px;
-      line-height: 30px;
+      line-height: 38px;
     }
     p {
       font-size: 24px;
