--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@ $preset-drack: $pulse-blue-drack; /*
 
 body {
   font-family: 'Open+Sans', sans-serif;
+  font-display: auto;
   color: #333;
   font-size: 20px;
   font-weight: 400;
